# stylegan2.jax

./: Makefile  pyproject.toml  setup.cfg
notebooks/: Train Example.ipynb
stylegan2/: __init__.py  _typing.py  networks.py  train.py
stylegan2/networks/: __init__.py  discriminator.py  embedding.py  generator.py  layers.py  utils.py
